fix form button hiding behind footer

--- a/assets/css/almen-ink.css
+++ b/assets/css/almen-ink.css
@@ -28,11 +28,12 @@ footer {
 
 /*form css, positioning, content */
 form {
-    width: 50%;
+    width: 60%;
     max-width: 100%;
     box-shadow: 0px 5px 5px rgb(52, 52, 52);
     margin-left: 1.5%;
     margin-top: 0.75%;
+    margin-bottom: 90px;
 }
 
 h1 {
